# pdf-chapter-splitter

./: .editorconfig  .gitignore  README.md  deploy_to_cloud.sh  docker-compose.yml  test_neo4j.py  test_report.md
.kiro/specs/pdf-chapter-splitter/: design.md  requirements.md  tasks.md
.kiro/steering/: chinese-language-preference.md
.trae/documents/: PDF四层架构知识图谱系统实现计划.md
ai-service/: Dockerfile  README.md  main.py  requirements.txt
ai-service/src/api/: routes.py
ai-service/src/core/: config.py
ai-service/src/models/: schemas.py
ai-service/src/services/: pdf_analyzer.py
backend/: Dockerfile  README.md  detailed_neo4j_test.py  go.mod  main.go  main.py  neo4j_test.py  requirements.txt  test_backend_neo4j.py  test_integration.py  test_neo4j_connection.py  test_neo4j_login.py
backend/internal/api/: handlers.go  router.go
backend/internal/config/: config.go
backend/internal/models/: models.go
backend/internal/service/: file_service.go  pdf_service.go
backend/src/: __init__.py
backend/src/api/: routes.py
backend/src/core/: config.py  database.py  neo4j_database.py
backend/src/models/: database_models.py  schemas.py
backend/src/services/: file_service.py  knowledge_graph_service.py  llm_service.py  pdf_analyzer.py  (+2 more)
docs/: SSH_CONNECTION_GUIDE.md  TENCENT_CLOUD_SETUP.md
frontend/: Dockerfile  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
pdf-processor/: Cargo.toml  Dockerfile  README.md
pdf-processor/src/: lib.rs  main.rs
scripts/: check_connection.sh  setup_tencent_cloud.sh
(+15 files in other folders)
