[package]
name = "pdf-processor"
version = "0.1.0"
edition = "2021"
authors = ["PDF Chapter Splitter Team"]
description = "高性能PDF处理引擎，用于PDF章节拆分"

[lib]
name = "pdf_processor"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "pdf-processor"
path = "src/main.rs"

[dependencies]
lopdf = "0.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3.0"
proptest = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true